--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,48 @@
-flask
+attrs==21.2.0
+certifi==2021.5.30
+charset-normalizer==2.0.6
+click==8.0.1
+convertdate==2.3.2
+cycler==0.10.0
+Cython==0.29.24
+decorator==5.1.0
+fbprophet==0.4.post2
+Flask==1.0.2
+hijri-converter==2.2.2
+holidays==0.9.12
+idna==3.2
+importlib-metadata==4.8.1
+ipython-genutils==0.2.0
+itsdangerous==2.0.1
+Jinja2==3.0.1
+jsonschema==3.2.0
+jupyter-core==4.8.1
+kiwisolver==1.3.1
+korean-lunar-calendar==0.2.1
+lunardate==0.2.0
+MarkupSafe==2.0.1
+matplotlib==3.3.4
+nbformat==5.1.3
+numpy==1.17.5
+pandas==0.23.4
+Pillow==8.3.2
+plotly==3.5.0
+psutil==5.5.0
+PyMeeus==0.5.11
+pyparsing==2.4.7
+pyrsistent==0.18.0
+pystan==2.18.0.0
+python-dateutil==2.8.2
+pickle-mixin==1.0.2
+pytz==2021.1
+requests==2.26.0
+retrying==1.3.3
+scikit-learn==0.20.2
+scipy==1.5.4
+setuptools-git==1.2
+six==1.16.0
+traitlets==4.3.3
+typing-extensions==3.10.0.2
+urllib3==1.26.7
+Werkzeug==2.0.1
+zipp==3.5.0
