--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ psutil==5.5.0
 PyMeeus==0.5.11
 pyparsing==2.4.7
 pyrsistent==0.18.0
-pystan==2.18.0.0
+pystan
 python-dateutil==2.8.2
 pickle-mixin==1.0.2
 pytz==2021.1
